[package]
name = "rust-arduino-blink"
version = "0.1.0"
authors = ["Volodymyr M. Lisivka <vlisivka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr-std-stub = "1.0"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "536c5d"

[profile.release]
opt-level = 1
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'abort'
incremental = false
